syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.alexast";
option java_outer_classname = "BackendProto";
option objc_class_prefix = "HLW";

package com.alexast;

service BackendService {
  rpc SendTransaction (BackendRequest) returns (BackendReply);
}

message BackendRequest {
  string trancode = 1;
}

message BackendReply {
  string trancode = 1;
}